--- a/Course Project 1/index.html
+++ b/Course Project 1/index.html
@@ -13,7 +13,7 @@
             <h1 class="text-center">YOU</h1>
             <div class="healthbar">
                 <div class="healthbar text-center" :style="{width: playerHealth + '%'}" style="background-color: green; margin: 0; color: white;">
-
+                    <span>{{playerHealth}}</span>
                 </div>
             </div>
         </div>
@@ -21,7 +21,7 @@
             <h1 class="text-center">MONSTER</h1>
             <div class="healthbar">
                 <div class="healthbar text-center" :style="{width: monsterHealth + '%'}" style="background-color: green; margin: 0; color: white;">
-
+                    <span>{{monsterHealth}}</span>
                 </div>
             </div>
         </div>
@@ -33,10 +33,10 @@
     </section>
     <section class="row controls" v-else>
         <div class="small-12 columns">
-            <button id="attack">ATTACK</button>
-            <button id="special-attack">SPECIAL ATTACK</button>
-            <button id="heal">HEAL</button>
-            <button id="give-up">GIVE UP</button>
+            <button id="attack" @click="attack">ATTACK</button>
+            <button id="special-attack" @click="specialAttack">SPECIAL ATTACK</button>
+            <button id="heal" @click="heal">HEAL</button>
+            <button @click="giveUp" id="give-up">GIVE UP</button>
         </div>
     </section>
     <section class="row log">
